# BinSpec.py

./: .gitignore  README.md  pyproject.toml
binspec/: __init__.py
binspec/types/: spec_type.py
binspec/ui/: __init__.py  ui.py
binspec_gui/: build.sh  requirements.txt
binspec_module/: .coverage  .gitignore  setup.py  test_binspec.py
binspec_module/binspec/: __init__.py  custom_spec_enum.py  errors.py  spec.py  spec_eof.py  spec_type.py  spec_type_base.py  ui.py
binspec_module/binspec/tests/: test.py  test_sample.py
binspec_module/binspec/types/: __init__.py  spec_type.py
binspec_module/binspec/ui/: page.html
binspec_module/binspec/utilities/: utilities.py
python_module/: .gitignore  run_tests.sh  setup.py
python_module/BinSpec/: __init__.py  custom_spec_enum.py  custom_spec_type.py  spec.py  spec_type.py
python_module/BinSpec.py/: __init__.py  custom_enum.py  custom_type.py  spec.py  type_base.py
python_module/binspec/: custom_spec_enum.py  custom_spec_type.py  spec_type.py
python_module/binspec_tests/: test_sample.py
